Updates to variable names and changed network IPs

--- a/.github/linters/.prettierignore
+++ b/.github/linters/.prettierignore
@@ -2,7 +2,5 @@
 .private
 .vscode/
 *.sops.*
-ansible/roles/xanmanning.k3s/
-gotk-components.yaml
 docs/
-kubernetes/charts/
+ingress-nginx/app/common-values.yaml
