--- a/kubernetes/apps/ingress-nginx/app/hr-internal.yaml
+++ b/kubernetes/apps/ingress-nginx/app/hr-internal.yaml
@@ -26,7 +26,7 @@ spec:
         # eTP can be Cluster (for HA & failover) instead of Local since Cilium is configured in DSR mode, so proper source IP will still work
         externalTrafficPolicy: Cluster
         annotations:
-          "io.cilium/lb-ipam-ips": "${IP_APP_NGINX}"
+          "io.cilium/lb-ipam-ips": "${IP_INGRESS_NGINX_INTERNAL}"
       # extraArgs:
       # default-ssl-certificate: ingress/short-domain-tls
       ingressClassResource:
