--- a/kubernetes/clusters/kube-prod/talos/talconfig.yaml
+++ b/kubernetes/clusters/kube-prod/talos/talconfig.yaml
@@ -16,13 +16,12 @@ additionalMachineCertSans:
 
 additionalApiServerCertSans:
   - ${IP_CLUSTER_VIP}
-  - ${DNS_CONTROLPLANE_FQDN}
 
 clusterPodNets:
-  - ${IP_POD_CIDR_V4}
+  - ${IP_CIDR_K8S_POD}
 
 clusterSvcNets:
-  - ${IP_SVC_CIDR_V4}
+  - ${IP_CIDR_K8S_SVC}
 
 nodes:
   - hostname: kube-prod-control-01
@@ -31,8 +30,10 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - interface: eth0
-        addresses:
-          - ${IP_CONTROL_01}/26
+        vlans:
+          - vlanId: 108
+            addresses:
+              - ${IP_CONTROL_01}/24
 
   - hostname: kube-prod-control-02
     ipAddress: ${IP_CONTROL_02}
@@ -40,8 +41,10 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - interface: eth0
-        addresses:
-          - ${IP_CONTROL_02}/26
+        vlans:
+          - vlanId: 108
+            addresses:
+              - ${IP_CONTROL_02}/24
 
   - hostname: kube-prod-control-03
     ipAddress: ${IP_CONTROL_03}
@@ -49,17 +52,21 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - interface: eth0
-        addresses:
-          - ${IP_CONTROL_03}/26
+        vlans:
+          - vlanId: 108
+            addresses:
+              - ${IP_CONTROL_03}/24
 
   - hostname: kube-prod-worker-01
-    ipAddress: ${IP_WORKER01}
+    ipAddress: ${IP_WORKER_01}
     controlPlane: false
     installDisk: /dev/sda
     networkInterfaces:
       - interface: eth0
-        addresses:
-          - ${IP_WORKER01}/26
+        vlans:
+          - vlanId: 108
+            addresses:
+              - ${IP_WORKER_01}/24
 
 patches:
   - |-
@@ -82,10 +89,13 @@ patches:
       path: /machine/network/interfaces/0/mtu
       value: 1500
     - op: add
-      path: /machine/network/interfaces/0/routes
+      path: /machine/network/interfaces/0/dhcp
+      value: false
+    - op: add
+      path: /machine/network/interfaces/0/vlans/0/routes
       value:
         - network: 0.0.0.0/0
-          gateway: ${IP_GATEWAY_K8S_VLAN}
+          gateway: ${IP_GATEWAY_K8S_NODE}
     - op: add
       path: /machine/time
       value:
