--- a/kubernetes/clusters/kube-prod/talos/talconfig.yaml
+++ b/kubernetes/clusters/kube-prod/talos/talconfig.yaml
@@ -30,10 +30,8 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - interface: eth0
-        vlans:
-          - vlanId: 108
-            addresses:
-              - ${IP_CONTROL_01}/24
+        addresses:
+          - "${IP_CONTROL_01}/24"
 
   - hostname: kube-prod-control-02
     ipAddress: ${IP_CONTROL_02}
@@ -41,10 +39,8 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - interface: eth0
-        vlans:
-          - vlanId: 108
-            addresses:
-              - ${IP_CONTROL_02}/24
+        addresses:
+          - "${IP_CONTROL_02}/24"
 
   - hostname: kube-prod-control-03
     ipAddress: ${IP_CONTROL_03}
@@ -53,9 +49,8 @@ nodes:
     networkInterfaces:
       - interface: eth0
         vlans:
-          - vlanId: 108
-            addresses:
-              - ${IP_CONTROL_03}/24
+        addresses:
+          - "${IP_CONTROL_03}/24"
 
   - hostname: kube-prod-worker-01
     ipAddress: ${IP_WORKER_01}
@@ -63,10 +58,8 @@ nodes:
     installDisk: /dev/sda
     networkInterfaces:
       - interface: eth0
-        vlans:
-          - vlanId: 108
-            addresses:
-              - ${IP_WORKER_01}/24
+        addresses:
+          - "${IP_WORKER_01}/24"
 
 patches:
   - |-
@@ -86,13 +79,16 @@ patches:
         - ${IP_HOME_DNS_1}
         - ${IP_HOME_DNS_2}
     - op: add
+      path: /machine/network/disableSearchDomain
+      value: true
+    - op: add
       path: /machine/network/interfaces/0/mtu
       value: 1500
     - op: add
       path: /machine/network/interfaces/0/dhcp
       value: false
     - op: add
-      path: /machine/network/interfaces/0/vlans/0/routes
+      path: /machine/network/interfaces/0/routes
       value:
         - network: 0.0.0.0/0
           gateway: ${IP_GATEWAY_K8S_NODE}
