--- a/kubernetes/apps/kube-system/cilium/config/BGP.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/BGP.yaml
@@ -21,5 +21,5 @@ spec:
               values: ["will-match-and-announce-all-services"],
             }
       neighbors:
-        - peerAddress: "${IP_GATEWAY_K8S_VLAN}/32" # unlike bgp-config ConfigMap, peerAddress needs to be in CIDR notation
+        - peerAddress: "${IP_GATEWAY_K8S_NODE}/32" # unlike bgp-config ConfigMap, peerAddress needs to be in CIDR notation
           peerASN: ${ASN_ROUTER}
