Add external ingress

--- a/kubernetes/apps/ingress-nginx/app/kustomization.yaml
+++ b/kubernetes/apps/ingress-nginx/app/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   #- netpol.yaml
   #- default-backend.yaml
   - hr-internal.yaml
-  #- hr-external.yaml
+  - hr-external.yaml
   #- hr-public.yaml
