Added cloudflared and echo-server

--- a/kubernetes/clusters/kube-prod/flux/kustomization.yaml
+++ b/kubernetes/clusters/kube-prod/flux/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
   - ../../../apps/kube-system/
   - ../../../apps/ingress-nginx/
   - ../../../apps/security-system/
+  - ../../../apps/network-system/
