--- a/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
+++ b/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
@@ -4,43 +4,43 @@ metadata:
     namespace: flux-system
     name: kube-prod-vars
 stringData:
-    OP_VERSION: ENC[AES256_GCM,data:aOhQ7pMehQ==,iv:WRG5+NzJT4aiTCawOhl5GBI9SE0/lxYgiSuXavcT0Lw=,tag:/ecmenYzWB/q6WwpuRUqXw==,type:str]
-    TALOS_VERSION: ENC[AES256_GCM,data:AHWLI+JU,iv:jYYPF9VVgQa6GjYLBh5HjRkmtw+qHNICA347yZuyrY8=,tag:Hc+B5HO6atvWLvvvSMr8EA==,type:str]
-    KUBERNETES_VERSION: ENC[AES256_GCM,data:qr/ecPMYgA==,iv:M2nxjWt3ezNUYpMezhX3fqvgRAoYluSEGGi/co1swK8=,tag:Ctti5ok3T9Ztz+n3lW+1+Q==,type:str]
-    CLUSTER_NAME: ENC[AES256_GCM,data:uFex5yOWnSa9,iv:ufJAW8Jz/qpR/5lFKg6l225Ar3e+u6KSy5655Yz26f8=,tag:bBHe1BVpv+CIOcOsPKTN+g==,type:str]
-    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:vA==,iv:4lXXCog9Zob9IbeC3iuMYovRTHulUyPehb3c7v1/a+M=,tag:MMO4MH4L3rBDxovrfU1ayQ==,type:str]
-    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:KA==,iv:Ff+DLU1/6svDZtr3hjNlwP/+JL9ZgW6tbpahHAxbH3c=,tag:AYq6VNGaub2xD9hUaAcbPA==,type:str]
-    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data:IVacfQ==,iv:arSkEHqCw/RZTgsJ3pH3QCislM8CNaWs9LdPA/2NlZA=,tag:MWDUA+K7ADw0+ZekLl8l+Q==,type:str]
-    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:xeLv,iv:pA9m6cWI2vWP3YyRrWJFUzGK6wAGU4dwHP3Gk7lmjf0=,tag:mE7P8qupooav37fRD7djgQ==,type:str]
-    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:5Q==,iv:9toxf8SlU21pDqzp4Qr+SG/t8l958XKOUP7EEYQyZ6k=,tag:zOd+O7Xopg24csitRPxSQA==,type:str]
-    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:FECjOA==,iv:TLsUHneMimPIcUa3ckqvfBKRc0PYAUqM2xwvur9zyHM=,tag:dVGkGS7LOTU7vwrkXpi3sA==,type:str]
-    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:280a,iv:Ksxs47U3tUNPs/b9yD3foqi0X9fMoNlLGdAYex5yvMg=,tag:Lot0QMad6H3TZWatgpw7FA==,type:str]
-    CONFIG_TZ: ENC[AES256_GCM,data:fkDtfxVyr5NqjoLcH3x03A==,iv:Ni9IjFxP4RERTrxw0JlJyuJTqdA9nsyU5uhKqz2zRdM=,tag:zBGHDEP+XAQDZqtBYyITFw==,type:str]
-    DNS_APP_HUBBLE: ENC[AES256_GCM,data:y8uihv3Ynytf06cNs6P/3xnyQ3+UHLY=,iv:klfbp1p23Zzr5R8F4LK1QQFPiFBU2WFcUf5Etyrgy1c=,tag:2/Lk/l4cQ4k4E60ygqsKug==,type:str]
-    DNS_CLUSTER_DN: ENC[AES256_GCM,data:D5sIv8trWPPawKfZoA==,iv:02W3oP71y6dJJj5ITp5oLSUBdBfI39N+kW5G6QNOr1w=,tag:UwfHNQQ5FnIfY8f7OAloHQ==,type:str]
-    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:YKBgWHfRxKzbXRR7rN7HA2roySb04N5VGYo=,iv:6mlyCm8IHhxBrzEhGECdvRomkrnLD/gWq4KEoIDNMwk=,tag:05a1JZMnEm2r/ywHEcRAyg==,type:str]
-    DNS_HOME_ROOT: ENC[AES256_GCM,data:PI9wp6lYCfcJwhIRFJZQPg==,iv:f/TLoLi2mCewxDl5JszeAVNTnhqLgIg/yw4zVRD/oXs=,tag:FvMPquI/IF6W556AVB9Q9g==,type:str]
-    IP_CIDR_K8S_POD: ENC[AES256_GCM,data:XwnfkYmQlvb2/d/M,iv:dnWATAWaGZcQUh5RVsSbbNGaH7gDODA2p7uFjRVmz/A=,tag:rTyWpwSy9+gBK+TJ3npHtA==,type:str]
-    IP_CIDR_K8S_SVC: ENC[AES256_GCM,data:nWq0vGUMAEiUVeSspg==,iv:6Y+zKQp8CovyfHlTLahJ3LZjlrVv0ZwaLv6mdS63w7Y=,tag:ydyLrEp8aUiWakvfC+H1XQ==,type:str]
-    IP_CIDR_K8S_NODE: ENC[AES256_GCM,data:or98MyTTOafGF0yw,iv:4+5rCqaA+iMCeqpReFsVHIyRpym14rVWW9BeFuY+9dc=,tag:09d+v7d1yWIoOIdo9yzW4A==,type:str]
-    IP_GATEWAY_K8S_NODE: ENC[AES256_GCM,data:z2WlsQ81DAaX,iv:btZvRfTt6eDhZGIOfq0aIKwoRGf8YSjy/tUSxdy8aBM=,tag:KCPjSPredNMXV+2/3bi6Qg==,type:str]
-    IP_CLUSTER_VIP: ENC[AES256_GCM,data:qCpKXQElpqe8ZkU=,iv:lWZ9g6CBH0hIDRc4+I6KvNaUAZQA8qltSoNzyhFWQqo=,tag:pwb6Q0ZsJzI9y9LzSnt2Hw==,type:str]
-    IP_INGRESS_NGINX_INTERNAL: ENC[AES256_GCM,data:yOFIaUrvXBAV8iY=,iv:nzhTNYBxw7LM29xieM3JHwZdDvvdch1UcTwNZ3DTmGc=,tag:2AaayfKONOkcXDPc5u4B5w==,type:str]
-    IP_INGRESS_NGINX_EXTERNAL: ENC[AES256_GCM,data:w5DH7uV69XxJuOk=,iv:bjEajfhWmAoNgj7pJzFD9g6wDOgHwyT9zhmmjCJNSyg=,tag:4e/apzkgZ1zJUNo4VVxKqA==,type:str]
-    IP_CONTROL_01: ENC[AES256_GCM,data:GXeFyIj6Nj7yxA==,iv:sbXOC+WkaXQ7n04XDtYxnQ0isHDkoGliNIZPMKTafL8=,tag:/IW9h6AtQdQGk19Nz4NdMA==,type:str]
-    IP_CONTROL_02: ENC[AES256_GCM,data:9yLVes4lTbdnWg==,iv:HPTyLMlNyxxgcTWSKH02JhlnbkWwox3ytTmRsgpDRTI=,tag:FxOVc/ls66B3quj/BdJRug==,type:str]
-    IP_CONTROL_03: ENC[AES256_GCM,data:TvOsmR7U+tXYIQ==,iv:wfsUE7s1gDw6ssLD8mu/zti5PWyJuRFdoTMOHWrSyzg=,tag:3KSXjXxNKkzpRo7X61C1Jg==,type:str]
-    IP_WORKER_01: ENC[AES256_GCM,data:g8P2opsgqAapIQ==,iv:lG34JYSz/8Yzy2yjME+5LmEB3b9sniqq7J1iLlfqPsw=,tag:H1EPe8c/qJmdMz4Dg2aczg==,type:str]
-    IP_HOME_DNS_1: ENC[AES256_GCM,data:q0lu8uYigjy5pjz9,iv:2oEJOWQMFR7fK8xn8RdzCNb6yrUSAv9BbiEp//a39y0=,tag:voS44GWosBWZSTKxF+QYaA==,type:str]
-    IP_HOME_DNS_2: ENC[AES256_GCM,data:DrC2IcyTOHBV0n61,iv:Rt8n5DDqKlISjbh/xZ8RpzvAE8F25i7HfR0+Pf8nEtA=,tag:/+FwP+ImC2gzDYIorFnwTA==,type:str]
-    IP_NTP_SERVER: ENC[AES256_GCM,data:4lqaRd8vgA2B7/M=,iv:QSTa/oCKK64VEdAsZXhM+5QsZhGUM4nm+fgMj7gM2YY=,tag:/2iy3kOzkoIeA705GuHYpg==,type:str]
-    GOVC_INSECURE: ENC[AES256_GCM,data:iQQxyg==,iv:kmz8Ky0SYc8h8732+Pma89J8iooS9UYI1vQ5PkLXQ4k=,tag:WPvFmth7QZFBPLKcHvJhdw==,type:str]
-    GOVC_LIBRARY: ENC[AES256_GCM,data:IIVQp1s=,iv:CD4AIT62V0Vw1l7KN0NbKbw0/MjhEInq8Iel6n/uezw=,tag:DHxOfo4Z9/xaqhVglTgz9g==,type:str]
-    GOVC_DATACENTER: ENC[AES256_GCM,data:7MbkeemUn915sa8F8I/d,iv:MGdJNXyuK0sz6IOkT9oGlmNFP0/oJbgCjx8lzW85qXs=,tag:nC31xg3bKcLSnLfxX1Lzwg==,type:str]
-    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:x3++USadHkgwgZU8OCtNDtQFSByPwpU=,iv:7y5JOJecZl0Xdj+S7g8lLXzgvYTynzHBe5D+WEQAh+8=,tag:1QeYGsjyhbkkRFdv1WlN4A==,type:str]
-    GOVC_DATASTORE: ENC[AES256_GCM,data:ZVby+qbDd91rhOxdPw==,iv:3UweT6F58Qqk1J3zSTQLi/C3UuAnKMgVTxV+fSoLlVM=,tag:eMS9RmV3kCKlFur72EVSiw==,type:str]
-    GOVC_NETWORK: ENC[AES256_GCM,data:1hdX,iv:FAijLBqotM92/eTBG6hxHTQyBMuH3J1AHLbYLfadYA4=,tag:gKyB/eUo6AKXP2cWgXOyUQ==,type:str]
-    ASN_ROUTER: ENC[AES256_GCM,data:Vono330=,iv:YkMo8ooNcwPG/UvYlIEz70IalgGfPRronVvkAQdSgVA=,tag:0Exz0CWPfPUEUhNZQoTNRA==,type:str]
+    OP_VERSION: ENC[AES256_GCM,data:A/3EgrqDYg==,iv:LNN18UOKTt8XVhKtmUk88uTToDG81HDKmKW+Y6rIq50=,tag:K5RPQesq7+YqbE/2+QEx0A==,type:str]
+    TALOS_VERSION: ENC[AES256_GCM,data:sTg3eJ0U,iv:LSHLVS+vlztSMEn0xZKA7qHZOHzkGO24/oiCk2Du9J0=,tag:EHK4gj71lfPQbg/UWVvKtg==,type:str]
+    KUBERNETES_VERSION: ENC[AES256_GCM,data:31NdUgADGw==,iv:04jPLUys0Az2t64ltVGefz9G0KU86/1K2vzPkX0r2QU=,tag:YOy9g9Tf62I4ca9UkVR8Rw==,type:str]
+    CLUSTER_NAME: ENC[AES256_GCM,data:XgGMlvkNFx+C,iv:Hm20mTccMVOE+4lGsHMgQ/lNAE4Oi6bvYZalO7xlqQA=,tag:6FczEfLZsxjmE2uxgoS7iA==,type:str]
+    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:sw==,iv:gMFWjImYmUgqrUNqBWGcQ4E3rtMvLSvuQj+i8EO1PGs=,tag:rhLPPDJjbKR+uJXpY6u9lg==,type:str]
+    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:2g==,iv:Yp/wHlfHRGr9JuNaI1UwdkToAAVh/zPq8RH9ydYyL5Q=,tag:wPEaK/fqlyI3He/2qRb3VQ==,type:str]
+    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data:Ub+Kbw==,iv:/z+jKK2avOcMc2xEuNARxbehlhM2dWPP4y7PjPn7PNk=,tag:f07kBbmQ+K9LOWz2I2Dkog==,type:str]
+    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:ZkVM,iv:PIIoNiRlGcFAM7oEprO0FlVDGp50in0lfPxw9WHCK/8=,tag:BGudDGb2nvPllRvRDF6Vwg==,type:str]
+    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:zQ==,iv:7dxFpKSFCbuOTgq7FD5SiwO5xO1j2iUFMuYQfwo82FQ=,tag:iM/yE4f3Qs+gDGhqSU1sKw==,type:str]
+    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:Rsb/+A==,iv:EBWaj6HnlCcOFalBAK1uF9m8U8eWLnb6V6+0ud3/ACU=,tag:ngACpZu92GF865xDLQ5FdA==,type:str]
+    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:GudI,iv:wpD/BRRkJqDorZxILpjuI6kPK//I+e3VGKpVDHWguX4=,tag:427btOX5jCPsaXgYkSQrgg==,type:str]
+    CONFIG_TZ: ENC[AES256_GCM,data:XtY6YTKHNGsDvSo+xFfU4g==,iv:6ch9N+s0ClBfZLWricA4AD0EMBEzsYXdyLaP5/8xKsk=,tag:Fbc6USeGeRVvakgqDW928g==,type:str]
+    DNS_APP_HUBBLE: ENC[AES256_GCM,data:qC6A6sQm3tVxofNvwB/O0AsaPu8T4rw=,iv:doisx6Gq/ofeEjT3VEKs0m9dgUvZtpJ4EdM48wFbLsg=,tag:TkFirmNNsTYaJ+lIbS4JwQ==,type:str]
+    DNS_CLUSTER_DN: ENC[AES256_GCM,data:ANaM0P4IQup/0Ezigg==,iv:N2PrcY2TTJjMSZFYkoVag0aFDNJB5huv4zp84dzbTPM=,tag:2kPwXrHxE1qQ3dMj1t4gug==,type:str]
+    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:+eiuFYPmpnlwghrNJ008Ykn736UkyuZOx0M=,iv:dY9tkLBrMYeNiHTmXs3RP+2n6GW9U7Sd/5drz7CZi0I=,tag:dq/yVGswmofJ+1C6ZDEmPQ==,type:str]
+    DNS_HOME_ROOT: ENC[AES256_GCM,data:/DT+t/cTBjMVPcktgGV4lw==,iv:enzeko8NrgzdTWt8GTMbvIXY0ONrqatcBjJ/VGiOY4s=,tag:YiWhE3qQABeSrdvsb9eHtQ==,type:str]
+    IP_CIDR_K8S_POD: ENC[AES256_GCM,data:ejHwY5xdA14oYoej,iv:sUYU/zc3/D20LJfh573ImXhzjTRr+K8sjmhpia1Y1lA=,tag:OLZvav5AFTIvIQ9fj3VPZA==,type:str]
+    IP_CIDR_K8S_SVC: ENC[AES256_GCM,data:tNFlooPHU9s9NLgfiw==,iv:qz+FtfZc0Twrnjn04hRu5ax/E4lX3Yyh4Se5hbnMzQM=,tag:RHjcAatRuE/RcYXrjEOYng==,type:str]
+    IP_CIDR_K8S_NODE: ENC[AES256_GCM,data:IyySMxLOQWdqjDEa,iv:6Cyb/i2lsfddXcOea0pdL6g0i9Rcf0YXp7SmX1WeAvw=,tag:uXPILU00VgyqysWsjy9Oxw==,type:str]
+    IP_GATEWAY_K8S_NODE: ENC[AES256_GCM,data:oz1IZMbJPyU9,iv:2nBolrnJqM0NmPXu28DWoC/lxnj+6kcryjje0ZenABY=,tag:l7R5z4aWU7QGnwXCzuQHGQ==,type:str]
+    IP_CLUSTER_VIP: ENC[AES256_GCM,data:OPOvJ366lXZMelI=,iv:IEOqZ7zVJDGQvsHnP8CAU9+rAXErkcaC25Qv+/7Hu2E=,tag:whoUDY8Fqwg3pQAWknueyg==,type:str]
+    IP_INGRESS_NGINX_INTERNAL: ENC[AES256_GCM,data:KhiYR8Zafpufi3g=,iv:iArniIoUVHdnPa0FP90rYW+8UVFllgCKs8SyXO6rYYg=,tag:9QUe0OgFwMFfZAC2kj9pqg==,type:str]
+    IP_INGRESS_NGINX_EXTERNAL: ENC[AES256_GCM,data:V1R5Z5a+V3kqQCI=,iv:feG7qpqynG1ih0IU5gupqGih6bA/CWzHpxKFXeIuFmE=,tag:fbrqJ2U0q7vZ+497sUJnuw==,type:str]
+    IP_CONTROL_01: ENC[AES256_GCM,data:PmkpV0cqUsFlUg==,iv:0hQXLhbIjU4hC7FIQt2nagmUkeS5irwG86TDrb669J8=,tag:ENWmo/u2MyoDKZ5dkRIy8w==,type:str]
+    IP_CONTROL_02: ENC[AES256_GCM,data:6L6fLVHYtXz8ag==,iv:CxHwUWXgyZXKESnLkb6jWjqB61rncS/lo7IkG96T6e4=,tag:+5vJFU0ZLw1wJknNW4g4IA==,type:str]
+    IP_CONTROL_03: ENC[AES256_GCM,data:sSHpxknCksiW3Q==,iv:A2FUiTvbvUg5PnrxVszcglWxOpuFm1rNYRETshp0WlQ=,tag:ovHLrdtVcSGyBDTcKQSaOw==,type:str]
+    IP_WORKER_01: ENC[AES256_GCM,data:bxdCsRbSGNC7gA==,iv:0od8VGyc0Z10+mHon7oANHhK3EklSZcofzIHvHq/SWU=,tag:RQvJSdN5jWTjNBNWxCPydw==,type:str]
+    IP_HOME_DNS_1: ENC[AES256_GCM,data:Zs/LTBREHKC6iZpV,iv:LExYU8yClGj7UYfnDZm8H5SwVLqmBMB+WGY9Blwzt24=,tag:psphibLE2X4RnQkOXF9BGw==,type:str]
+    IP_HOME_DNS_2: ENC[AES256_GCM,data:s0f3XHzkzC4OPEBA,iv:OTasND25tr7Cr0uq7kqgIhho4Dnt6h57kDwTePp6tDA=,tag:cW3oiVHV6qqkg1oZoBSSzg==,type:str]
+    IP_NTP_SERVER: ENC[AES256_GCM,data:kpWWhZKIQq7ROPg=,iv:Jthr8wNJFDjWdcRJkwWN6/s0w/g6GR+HSWwoyetzqIE=,tag:DXMUoJLIXl35egAm864YqQ==,type:str]
+    GOVC_INSECURE: ENC[AES256_GCM,data:gBiXNg==,iv:fSdb/GJbiRtTBx5CslLlgeNNfjZKUdnHCM3hI+b4Lkc=,tag:bIlNFiWICjOl60SmSDmvbQ==,type:str]
+    GOVC_LIBRARY: ENC[AES256_GCM,data:CZv44u0=,iv:xP+TPUIXg71bWH2YImqys56MCUdxfafVAv74N5g+dBk=,tag:Yj05gu+rA/GnXK+hDbdEww==,type:str]
+    GOVC_DATACENTER: ENC[AES256_GCM,data:lUB7WSwaqN0RBsve2bA4,iv:vc8Qyv6PxZK0bI82zoEBX0FCwxwLMWt2T3ZiB7T3jJA=,tag:FYoAODmZPotKcPDq/Ugb8g==,type:str]
+    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:3ZI6G4XPHGyYM2wi0OwyBnaDVFyTe68=,iv:IzuLB8v7xiVkw3W+Kbu/B0lq4dn5MoqogNn9koul7aQ=,tag:wPh0CEXFGMY5y/FCywa0iA==,type:str]
+    GOVC_DATASTORE: ENC[AES256_GCM,data:uGjXRxHyXrUVk7yDqw==,iv:9SR5H4SAeajk3n91Jor3aEyFUUhlv9MJ8iDkYZ0XnBI=,tag:gZfFX/zfIOCtFS7c7wHbGA==,type:str]
+    GOVC_NETWORK: ENC[AES256_GCM,data:981g,iv:dz3hjR1nUNTcqutw50YrL3qi2JOrv5LwjrnHHOwYpO8=,tag:XUXcmhzF7hD1Rk0s/NTnew==,type:str]
+    ASN_ROUTER: ENC[AES256_GCM,data:kIvqykM=,iv:E7Ffq+CXpFF/x7puiZJWqRQ8qScUX2Aj4KqqvZSJ6pk=,tag:srEa/Zt7a8QPRo8pLYbh2A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -50,14 +50,14 @@ sops:
         - recipient: age1skatly42g7vng3twta22kdlvzg98p3p5zk7rzn285pncxkzzu3usvp7gvh
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWcjNUSE9ZaU5OZGM5R1B6
-            ZW1meDhUWW1nVFA1YnE2KzZmaytGQzZ5N2l3CnIxQ1dKUndDMnB0ZEdWck4vN3hX
-            b1Uvd25UNWpjdVlSeUpSdDd2eXRxbHMKLS0tIDZtQjdCQmFzVUd5U09XQ0JVOE4r
-            QTdFTUFYNlVYYlUyd0ZmOG9KOTJRUWMKEyCsow3BoH0msXJsJX51Q+J1W4fbyMip
-            bohvWsfezU2nQnCeVfD7e9vEtxjoPemORrCyMkUJ0U8SSCmsuOOzWQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGR0hVbGs0VmxESnlHVDdq
+            cTJrWGFiQmpESzk2WEphMW5Hd3BQVXdpU2xRCjJIbEZjZlZxYVp5MDlqWkZsZ1A1
+            VHhaNEJFVkkvRmJpMUNxaGo4NmxxVEEKLS0tIFAxcEhuVHNqMDlBYVlpQkZBbUpD
+            cEE5L1JodnNFWFkwVkJaS1FRbjRyVEEKkeVRX/fZRsojNHiRjsfwf+VzuoNos4Gx
+            imlqjFt3V9lTfoXmLSpwByBSEgyQdfT9Wgeu4g7jYuu6mFdBE99VKw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-14T22:16:37Z"
-    mac: ENC[AES256_GCM,data:hqDMABmsN/alqPlNlsKorNv5aOzKd6QtH9cy97SzSPWKDqQouf5CcHDGpqu1aKV9gKTtY2PH/Cr0fI42Bp1EXPsa94ZEi+tAVVfeixtVZHWl+UILAjFAyF22JYlGQguTRUo+tDdeHHUVp0MSAOaPa03TAV6F9aLLI2RMIla7E1U=,iv:WuB/8NSbevq6HsUKCH6PKRgn/B4J/SqxYe3qJiewkbM=,tag:RPr8VCXCgVAYHzaWeU0P2Q==,type:str]
+    lastmodified: "2023-12-14T22:40:53Z"
+    mac: ENC[AES256_GCM,data:yhpEw3F/c+/4jalVFll1D/3nuDUCFq9/WxypbB3RIV00PyU7MVS5GVFx9RnZoxYunMRoXowAPMjMyLFxmMOMeSKqZeCswOoEV2eIqyfr+Yd3yWCE7hdtQKAApcBk+ezXXBlGyMK5g+2KtxpS72qhIMULbQGurOFnYLXovwy2TgI=,iv:HUKbJAPLKn+Z/yd9brPo523XU30BAwmebLwGH2zUPJU=,tag:EWPdNVSRdtdyLGdXzExb+A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
