fix namespace and flux api reference

--- a/kubernetes/apps/network-system/cloudflared/ks.yaml
+++ b/kubernetes/apps/network-system/cloudflared/ks.yaml
@@ -5,6 +5,7 @@ metadata:
   name: apps-network-system-cloudflared
   namespace: flux-system
 spec:
+  targetNamespace: network-system
   path: ./kubernetes/apps/network-system/cloudflared/app
   dependsOn:
     - name: 1-core-ingress-nginx-app
