--- a/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
+++ b/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
@@ -4,43 +4,44 @@ metadata:
     namespace: flux-system
     name: kube-prod-vars
 stringData:
-    OP_VERSION: ENC[AES256_GCM,data:A/3EgrqDYg==,iv:LNN18UOKTt8XVhKtmUk88uTToDG81HDKmKW+Y6rIq50=,tag:K5RPQesq7+YqbE/2+QEx0A==,type:str]
-    TALOS_VERSION: ENC[AES256_GCM,data:sTg3eJ0U,iv:LSHLVS+vlztSMEn0xZKA7qHZOHzkGO24/oiCk2Du9J0=,tag:EHK4gj71lfPQbg/UWVvKtg==,type:str]
-    KUBERNETES_VERSION: ENC[AES256_GCM,data:31NdUgADGw==,iv:04jPLUys0Az2t64ltVGefz9G0KU86/1K2vzPkX0r2QU=,tag:YOy9g9Tf62I4ca9UkVR8Rw==,type:str]
-    CLUSTER_NAME: ENC[AES256_GCM,data:XgGMlvkNFx+C,iv:Hm20mTccMVOE+4lGsHMgQ/lNAE4Oi6bvYZalO7xlqQA=,tag:6FczEfLZsxjmE2uxgoS7iA==,type:str]
-    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:sw==,iv:gMFWjImYmUgqrUNqBWGcQ4E3rtMvLSvuQj+i8EO1PGs=,tag:rhLPPDJjbKR+uJXpY6u9lg==,type:str]
-    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:2g==,iv:Yp/wHlfHRGr9JuNaI1UwdkToAAVh/zPq8RH9ydYyL5Q=,tag:wPEaK/fqlyI3He/2qRb3VQ==,type:str]
-    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data:Ub+Kbw==,iv:/z+jKK2avOcMc2xEuNARxbehlhM2dWPP4y7PjPn7PNk=,tag:f07kBbmQ+K9LOWz2I2Dkog==,type:str]
-    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:ZkVM,iv:PIIoNiRlGcFAM7oEprO0FlVDGp50in0lfPxw9WHCK/8=,tag:BGudDGb2nvPllRvRDF6Vwg==,type:str]
-    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:zQ==,iv:7dxFpKSFCbuOTgq7FD5SiwO5xO1j2iUFMuYQfwo82FQ=,tag:iM/yE4f3Qs+gDGhqSU1sKw==,type:str]
-    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:Rsb/+A==,iv:EBWaj6HnlCcOFalBAK1uF9m8U8eWLnb6V6+0ud3/ACU=,tag:ngACpZu92GF865xDLQ5FdA==,type:str]
-    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:GudI,iv:wpD/BRRkJqDorZxILpjuI6kPK//I+e3VGKpVDHWguX4=,tag:427btOX5jCPsaXgYkSQrgg==,type:str]
-    CONFIG_TZ: ENC[AES256_GCM,data:XtY6YTKHNGsDvSo+xFfU4g==,iv:6ch9N+s0ClBfZLWricA4AD0EMBEzsYXdyLaP5/8xKsk=,tag:Fbc6USeGeRVvakgqDW928g==,type:str]
-    DNS_APP_HUBBLE: ENC[AES256_GCM,data:qC6A6sQm3tVxofNvwB/O0AsaPu8T4rw=,iv:doisx6Gq/ofeEjT3VEKs0m9dgUvZtpJ4EdM48wFbLsg=,tag:TkFirmNNsTYaJ+lIbS4JwQ==,type:str]
-    DNS_CLUSTER_DN: ENC[AES256_GCM,data:ANaM0P4IQup/0Ezigg==,iv:N2PrcY2TTJjMSZFYkoVag0aFDNJB5huv4zp84dzbTPM=,tag:2kPwXrHxE1qQ3dMj1t4gug==,type:str]
-    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:+eiuFYPmpnlwghrNJ008Ykn736UkyuZOx0M=,iv:dY9tkLBrMYeNiHTmXs3RP+2n6GW9U7Sd/5drz7CZi0I=,tag:dq/yVGswmofJ+1C6ZDEmPQ==,type:str]
-    DNS_HOME_ROOT: ENC[AES256_GCM,data:/DT+t/cTBjMVPcktgGV4lw==,iv:enzeko8NrgzdTWt8GTMbvIXY0ONrqatcBjJ/VGiOY4s=,tag:YiWhE3qQABeSrdvsb9eHtQ==,type:str]
-    IP_CIDR_K8S_POD: ENC[AES256_GCM,data:ejHwY5xdA14oYoej,iv:sUYU/zc3/D20LJfh573ImXhzjTRr+K8sjmhpia1Y1lA=,tag:OLZvav5AFTIvIQ9fj3VPZA==,type:str]
-    IP_CIDR_K8S_SVC: ENC[AES256_GCM,data:tNFlooPHU9s9NLgfiw==,iv:qz+FtfZc0Twrnjn04hRu5ax/E4lX3Yyh4Se5hbnMzQM=,tag:RHjcAatRuE/RcYXrjEOYng==,type:str]
-    IP_CIDR_K8S_NODE: ENC[AES256_GCM,data:IyySMxLOQWdqjDEa,iv:6Cyb/i2lsfddXcOea0pdL6g0i9Rcf0YXp7SmX1WeAvw=,tag:uXPILU00VgyqysWsjy9Oxw==,type:str]
-    IP_GATEWAY_K8S_NODE: ENC[AES256_GCM,data:oz1IZMbJPyU9,iv:2nBolrnJqM0NmPXu28DWoC/lxnj+6kcryjje0ZenABY=,tag:l7R5z4aWU7QGnwXCzuQHGQ==,type:str]
-    IP_CLUSTER_VIP: ENC[AES256_GCM,data:OPOvJ366lXZMelI=,iv:IEOqZ7zVJDGQvsHnP8CAU9+rAXErkcaC25Qv+/7Hu2E=,tag:whoUDY8Fqwg3pQAWknueyg==,type:str]
-    IP_INGRESS_NGINX_INTERNAL: ENC[AES256_GCM,data:KhiYR8Zafpufi3g=,iv:iArniIoUVHdnPa0FP90rYW+8UVFllgCKs8SyXO6rYYg=,tag:9QUe0OgFwMFfZAC2kj9pqg==,type:str]
-    IP_INGRESS_NGINX_EXTERNAL: ENC[AES256_GCM,data:V1R5Z5a+V3kqQCI=,iv:feG7qpqynG1ih0IU5gupqGih6bA/CWzHpxKFXeIuFmE=,tag:fbrqJ2U0q7vZ+497sUJnuw==,type:str]
-    IP_CONTROL_01: ENC[AES256_GCM,data:PmkpV0cqUsFlUg==,iv:0hQXLhbIjU4hC7FIQt2nagmUkeS5irwG86TDrb669J8=,tag:ENWmo/u2MyoDKZ5dkRIy8w==,type:str]
-    IP_CONTROL_02: ENC[AES256_GCM,data:6L6fLVHYtXz8ag==,iv:CxHwUWXgyZXKESnLkb6jWjqB61rncS/lo7IkG96T6e4=,tag:+5vJFU0ZLw1wJknNW4g4IA==,type:str]
-    IP_CONTROL_03: ENC[AES256_GCM,data:sSHpxknCksiW3Q==,iv:A2FUiTvbvUg5PnrxVszcglWxOpuFm1rNYRETshp0WlQ=,tag:ovHLrdtVcSGyBDTcKQSaOw==,type:str]
-    IP_WORKER_01: ENC[AES256_GCM,data:bxdCsRbSGNC7gA==,iv:0od8VGyc0Z10+mHon7oANHhK3EklSZcofzIHvHq/SWU=,tag:RQvJSdN5jWTjNBNWxCPydw==,type:str]
-    IP_HOME_DNS_1: ENC[AES256_GCM,data:Zs/LTBREHKC6iZpV,iv:LExYU8yClGj7UYfnDZm8H5SwVLqmBMB+WGY9Blwzt24=,tag:psphibLE2X4RnQkOXF9BGw==,type:str]
-    IP_HOME_DNS_2: ENC[AES256_GCM,data:s0f3XHzkzC4OPEBA,iv:OTasND25tr7Cr0uq7kqgIhho4Dnt6h57kDwTePp6tDA=,tag:cW3oiVHV6qqkg1oZoBSSzg==,type:str]
-    IP_NTP_SERVER: ENC[AES256_GCM,data:kpWWhZKIQq7ROPg=,iv:Jthr8wNJFDjWdcRJkwWN6/s0w/g6GR+HSWwoyetzqIE=,tag:DXMUoJLIXl35egAm864YqQ==,type:str]
-    GOVC_INSECURE: ENC[AES256_GCM,data:gBiXNg==,iv:fSdb/GJbiRtTBx5CslLlgeNNfjZKUdnHCM3hI+b4Lkc=,tag:bIlNFiWICjOl60SmSDmvbQ==,type:str]
-    GOVC_LIBRARY: ENC[AES256_GCM,data:CZv44u0=,iv:xP+TPUIXg71bWH2YImqys56MCUdxfafVAv74N5g+dBk=,tag:Yj05gu+rA/GnXK+hDbdEww==,type:str]
-    GOVC_DATACENTER: ENC[AES256_GCM,data:lUB7WSwaqN0RBsve2bA4,iv:vc8Qyv6PxZK0bI82zoEBX0FCwxwLMWt2T3ZiB7T3jJA=,tag:FYoAODmZPotKcPDq/Ugb8g==,type:str]
-    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:3ZI6G4XPHGyYM2wi0OwyBnaDVFyTe68=,iv:IzuLB8v7xiVkw3W+Kbu/B0lq4dn5MoqogNn9koul7aQ=,tag:wPh0CEXFGMY5y/FCywa0iA==,type:str]
-    GOVC_DATASTORE: ENC[AES256_GCM,data:uGjXRxHyXrUVk7yDqw==,iv:9SR5H4SAeajk3n91Jor3aEyFUUhlv9MJ8iDkYZ0XnBI=,tag:gZfFX/zfIOCtFS7c7wHbGA==,type:str]
-    GOVC_NETWORK: ENC[AES256_GCM,data:981g,iv:dz3hjR1nUNTcqutw50YrL3qi2JOrv5LwjrnHHOwYpO8=,tag:XUXcmhzF7hD1Rk0s/NTnew==,type:str]
-    ASN_ROUTER: ENC[AES256_GCM,data:kIvqykM=,iv:E7Ffq+CXpFF/x7puiZJWqRQ8qScUX2Aj4KqqvZSJ6pk=,tag:srEa/Zt7a8QPRo8pLYbh2A==,type:str]
+    OP_VERSION: ENC[AES256_GCM,data:YiWBxqMi9w==,iv:wsuLpOB/nX42dF5L7eSsYEu8wBuKD4RIFoFGhKO7fLk=,tag:iAhJGL2JLqKee9DhCsYuWA==,type:str]
+    TALOS_VERSION: ENC[AES256_GCM,data:wLzLEQWo,iv:icUvSxVnRNtrNnXc3E/CK+cSY1rSAzdP1GiEjd53PjE=,tag:N70yKj2ntN3JH6MRGQ8Jhg==,type:str]
+    KUBERNETES_VERSION: ENC[AES256_GCM,data:xC+1FX9oNg==,iv:ICIcg4E0zYnUoxNBa1ReAOEgCcb22sMvGf9iDwycgbk=,tag:bG2cYCAuTdb+NLycTEHUKA==,type:str]
+    CLUSTER_NAME: ENC[AES256_GCM,data:q1FDUP83947f,iv:BLmt3cTDmEXrpkzE0mAuYtBMczglA57otzWw+aAQ9G0=,tag:N+2denXI8+9GO85boIcBcg==,type:str]
+    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:Mg==,iv:BM/+A5JlIs3TOIHtAYHj0pAArTwrTvUK9Z1g2ZiS/B0=,tag:Il1X5zQF9o6VX9CZEoA/cw==,type:str]
+    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:dQ==,iv:I8D3BsIfoAvOb5AaFqlSWS4nMM86Q2dr/rfr2Rw/ZdM=,tag:y1+0FjrD1qOoksSdeHW5Dw==,type:str]
+    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data:fn6zGQ==,iv:yNFGywnBJB4FLxNF8Qe5yVgQqmwUsZQJLsiBbUrS+mI=,tag:4kSuy2L90EuClSA3Wx0gvw==,type:str]
+    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:3fQ7,iv:7uyKvK8IkBh2dVZVrNBi6fqS1e6kJBlXfXPPmvqLCTs=,tag:A7ROobWoAyoW4D8A3+Mhpw==,type:str]
+    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:6A==,iv:aLr8t23NBpg22qXqqPSLoVps+dP+cEgV4MbLcTZqoxQ=,tag:vIJorYhaHA6tVYHVOtQNgA==,type:str]
+    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:2XzzpQ==,iv:gBoXv4cE8sXCFnL21QTPF6ytS+jK2pEnXOyUvg6vbTc=,tag:mfF/IbyESqmIMMKuBN8fJA==,type:str]
+    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:wv1S,iv:R2fBpqkIlpyuJ9C4ZZmpyNN0SuGkJZlupRxzCT7B19E=,tag:Bi4hrQJwFkUjkBYvQrjhQA==,type:str]
+    CONFIG_TZ: ENC[AES256_GCM,data:905qCod0gfYtBEEJbxfe4Q==,iv:cS+Sx2GEysx/K6+k04oNAhu+UdogSiF//xYd3RUuN/k=,tag:YdIPOZxBuWpsMeaSH3jYug==,type:str]
+    DNS_APP_HUBBLE: ENC[AES256_GCM,data:QEkQDPhQi/AT0ocIoGY2ptDoZjSyQsI=,iv:2hjWFtMo1A35+GH1NQUXuEdMk1Gngbb2NnFfuRJfn/0=,tag:3VwfsFkm1jlrM2V9BEt4xQ==,type:str]
+    DNS_CLUSTER_DN: ENC[AES256_GCM,data:X1sWikxv2uqtNmBF4A==,iv:dtGCgduXfe5Bu9VBi6TSEvUxwTStOKxlT9q5DgMla7E=,tag:On1MOAUwJ43yElb+ECN3pQ==,type:str]
+    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:6H/ef28L9RPdNoQaRnDqSSlhHrIq/5wnYyg=,iv:UeYW5JR3A2oOw/IAJMLKkfPcRiNIW6udhjFf/Q9eU7E=,tag:NiVFlvTHKTOKMgmsr+tFuw==,type:str]
+    DNS_HOME_ROOT: ENC[AES256_GCM,data:YMGaWjXu8pTLwzCb/WwCbQ==,iv:IRgzxgX3J4q0wO2Md5hV/UXGzBjhDU6v0HnS9dESpko=,tag:FC9G3AJoSMInBcmkazfg+w==,type:str]
+    DNS_PUBLIC_ROOT: ENC[AES256_GCM,data:gD0dYF6g2Ks7S64gRrBM8CjjblCA7A==,iv:rb8wkpBouqMyoOrJBRV+EW7fqr3vLQjBPc1DmBSFRec=,tag:gLao8D4ry1ooHsJ+KEqTww==,type:str]
+    IP_CIDR_K8S_POD: ENC[AES256_GCM,data:wRIhz4w4FvK77Qou,iv:ZYW9OZjTalMD0YNQ+D08F8twf/OBeFSlYT0sYXVzBik=,tag:mUVAjMdiksq7BGeSMD6j4Q==,type:str]
+    IP_CIDR_K8S_SVC: ENC[AES256_GCM,data:vossywV7FZy0QZTswg==,iv:1mTtKIVOc3R1n7v4lb1f4F9DSaO6FJiOGzZzPISPvoo=,tag:CWc1v+GhVqk+nV+hxjChoA==,type:str]
+    IP_CIDR_K8S_NODE: ENC[AES256_GCM,data:mgrpzrjOIlxa01kd,iv:u8braspBoWdWE4JSbFAHFYb5kPYybhLK8J2LPMrIcQg=,tag:kDaltFElGxcukhgdXwy9mQ==,type:str]
+    IP_GATEWAY_K8S_NODE: ENC[AES256_GCM,data:81U87G+yVRln,iv:VZLkHOS809QjZ+F7ZJGDajuCandGk1LAQ3OoUEnvR9U=,tag:xQ8ZkagZ09fAfQXdCZecNA==,type:str]
+    IP_CLUSTER_VIP: ENC[AES256_GCM,data:1OOOskGLewjJDlI=,iv:gl9JvG+nEAVisxpZ6G50MJ3rirFJdzjRTKzv17PBM+Q=,tag:ITFdvLhKvzA+BD5Rud6XHw==,type:str]
+    IP_INGRESS_NGINX_INTERNAL: ENC[AES256_GCM,data:vzlLP0Ab4jro83U=,iv:ek2fDIT3fz2YeeEHPIch2bnNCsQnT/q9HSgGgupNR9E=,tag:MzkZMG4vYvKmywf1215lig==,type:str]
+    IP_INGRESS_NGINX_EXTERNAL: ENC[AES256_GCM,data:adqULhtdxR7jg3U=,iv:t0yv+kun8leP9+BJRXj7MZkZA1wZkwfTry53AJf3IRM=,tag:MRZeaoCXZp4ZhyzfsinNmw==,type:str]
+    IP_CONTROL_01: ENC[AES256_GCM,data:bn40fljpsCqRKQ==,iv:mCgb7dno2CRHjrg0Ij0pBGosccMz8cPRmMfj3aP/gNU=,tag:wLsQzzUDnbF3ETpRqxg1KQ==,type:str]
+    IP_CONTROL_02: ENC[AES256_GCM,data:dgslSEJHnE+zww==,iv:3ppOzdVQA20X8mpxIk3RGepB6gSIfbS8ZfU8SgW1Srw=,tag:HWwUhbJ6DYM6aEIdPLIeQA==,type:str]
+    IP_CONTROL_03: ENC[AES256_GCM,data:jfeEv57Ugic++Q==,iv:dlWebJ+Ui+6gn5FTj208oFNJOoBDwrV1CHItSZY/Yv4=,tag:rxv1tSDTZpSyP815auX6LQ==,type:str]
+    IP_WORKER_01: ENC[AES256_GCM,data:HQCLkyJ5jm0b8A==,iv:jNwV6TitD2+oYQNfOMgyrCLmIsMDmhdROXSfePpRK/8=,tag:/XitWdNV5YDNiYjVt0wdOw==,type:str]
+    IP_HOME_DNS_1: ENC[AES256_GCM,data:9mSEjWDbHRUt7u5s,iv:drHGbrserOrBLKM6A+96xx+VlpLIm74yw+LfSrBxwpA=,tag:aRyw/dCoHP25tkxXUs3BiQ==,type:str]
+    IP_HOME_DNS_2: ENC[AES256_GCM,data:4UlQJHWD3iBRbgzz,iv:+CCh9d9pApUdan7nzjr1kUWId3/dv0kubKhKzsdN7X8=,tag:1i0EfVyVk/+b9UJ13j96AQ==,type:str]
+    IP_NTP_SERVER: ENC[AES256_GCM,data:3nybnjHnFI6PsZM=,iv:pGjostsOFDmlkkqoaTrEyBjlSQNW0JqblhfDAi7G0VI=,tag:sGAfBsQ/LtYhXtngEFdlYQ==,type:str]
+    GOVC_INSECURE: ENC[AES256_GCM,data:LEIXQQ==,iv:/pAB/TuZhCxzin5vg6N6zbgZbtJmRUlyVMeraxSMHk0=,tag:ZuWxJTdRP6ouKDvZgX/ZOQ==,type:str]
+    GOVC_LIBRARY: ENC[AES256_GCM,data:RpZmO98=,iv:ZEupnppG5GrEa9w2x9Uj5W+FDq9oDEFbZZWahzb2eBI=,tag:P83/huSGad17Xq64czY9hQ==,type:str]
+    GOVC_DATACENTER: ENC[AES256_GCM,data:xqma194eu4/BQgb1UNAY,iv:4EclhHfhyEEBNwtsmuqDCNP0b0mfzBr5TODaN0n0QPU=,tag:Ke/4+pw12ZFya8SEgXH85A==,type:str]
+    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:rAqQxBmtbshIo0A0SQLIseF4azot/Aw=,iv:crWA5NxlwwJeuTS2vYfWj/fSCu5PkJRYInklJ1XjC18=,tag:qVdtIf/I2GJ1kqwuIvf/JA==,type:str]
+    GOVC_DATASTORE: ENC[AES256_GCM,data:sNhGDIXD2B4Wn3XaNQ==,iv:sGyUi2gqTkvzMXuI4Fx010QByNl7yzyZLWQJzVYHWn8=,tag:am6eNxlHzYQrP55FrpmRJQ==,type:str]
+    GOVC_NETWORK: ENC[AES256_GCM,data:T7Ci,iv:u+qyMVxcVik0L6/xUSOk6GMfbZlmZ69/g+OZT+4WMnI=,tag:qBzGDMARD3AZ7pY0tucGHg==,type:str]
+    ASN_ROUTER: ENC[AES256_GCM,data:/7eSs/g=,iv:iweU8WHgE1sEdeirHLGnVdWNAPRfet6BFV/lbWCyevc=,tag:l+sgVVUQI01g5RN4dWrIhg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -50,14 +51,14 @@ sops:
         - recipient: age1skatly42g7vng3twta22kdlvzg98p3p5zk7rzn285pncxkzzu3usvp7gvh
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGR0hVbGs0VmxESnlHVDdq
-            cTJrWGFiQmpESzk2WEphMW5Hd3BQVXdpU2xRCjJIbEZjZlZxYVp5MDlqWkZsZ1A1
-            VHhaNEJFVkkvRmJpMUNxaGo4NmxxVEEKLS0tIFAxcEhuVHNqMDlBYVlpQkZBbUpD
-            cEE5L1JodnNFWFkwVkJaS1FRbjRyVEEKkeVRX/fZRsojNHiRjsfwf+VzuoNos4Gx
-            imlqjFt3V9lTfoXmLSpwByBSEgyQdfT9Wgeu4g7jYuu6mFdBE99VKw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLbXdYWkJLY296T2ZvaEll
+            ZDJXazhkaHd0cXVPc0pqejJuZDU5S1JhSlhVCitWcllBdlRXLzIyVmxmS2h2ZHNT
+            NDBCM1UyakVaejJXc2ZFVXN4S0tjWEUKLS0tIE1OUHJhSEVjc2hmNCtldnFTMjFt
+            TmNjZDdYeHVjOHR2TS9ZRVB4YUpPaFEKLEeEQP3671MopP6QMiAl3geVV0TOVjDR
+            uFUwwud0DUgAfP4v6nplq30JP0dZfjsdS/d0LYmlPYS1rarSKhDX/g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-14T22:40:53Z"
-    mac: ENC[AES256_GCM,data:yhpEw3F/c+/4jalVFll1D/3nuDUCFq9/WxypbB3RIV00PyU7MVS5GVFx9RnZoxYunMRoXowAPMjMyLFxmMOMeSKqZeCswOoEV2eIqyfr+Yd3yWCE7hdtQKAApcBk+ezXXBlGyMK5g+2KtxpS72qhIMULbQGurOFnYLXovwy2TgI=,iv:HUKbJAPLKn+Z/yd9brPo523XU30BAwmebLwGH2zUPJU=,tag:EWPdNVSRdtdyLGdXzExb+A==,type:str]
+    lastmodified: "2023-12-15T05:55:21Z"
+    mac: ENC[AES256_GCM,data:Mr9GHeL+VKHGjjFwe2Ks+r+qoC4FKsJ3gZbMOJYoHXHp6m6k7taPiR8BL3zk7WAy4lqgTMdzKAHjspT+TnAjb4ugYTozBm1nWknmHRxVzkVOM2qCWCudQAzsvoGAjBih67J7dIsYxBHK7r0S42/5caX2ug7q8frGdkWel4T8IhE=,iv:abypuGRZ47fg4tyE5UPAglM1SfTUxIGkQqBiYynVD9s=,tag:5FJ0xZq0ioUHPiOkJHy0aA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
